# hri_tiago_simulator

./: CMakeLists.txt  README.md  package.xml
launch/: scenario_1.launch
models/green_wall/: model.config  model.sdf
src/: main.cpp
world/: hallway.world
