<?xml version="1.0"?>
<package format="2">
  <name>sim_world</name>
  <version>0.0.0</version>
  <description>The sim_world package</description>
  <maintainer email="jhermosilla@todo.todo">jhermosilla</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>husky_control</exec_depend>
  <exec_depend>husky_description</exec_depend>
  <!-- <exec_depend>multimaster_launch</exec_depend> -->
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>

  <!-- The export tag contains other, unspecified, tags
  -->
  <export>
  <gazebo_ros gazebo_model_path="${prefix}/models"/>
  <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
